--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>EnperryGames</title>
         <link rel="stylesheet" href="/style.css">
-        <link href="https://fonts.cdnfonts.com/css/8bit-wonder" rel="stylesheet">              
+        <link href="https://fonts.cdnfonts.com/css/8bit-wonder" rel="stylesheet">
     </head>
     <body>
         <nav class="navbar">
@@ -36,7 +36,7 @@
             <div class="main__container">
                 <div class="main__content">
                     <h1>Introduction</h1>
-                    <p>I'm Adam and I'm an indie game developer and programmer.</p>
+                    <p>I'm Adam(Enperry) and I'm an indie game developer and programmer.</p>
                     <button class="main__btn">
                         <a href="/games.html">Play My Games</a>
                     </button>
