--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <title>EnperryGames</title>
         <link rel="stylesheet" href="/style.css">
         <link href="https://fonts.cdnfonts.com/css/8bit-wonder" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
     </head>
     <body>
         <nav class="navbar">
