pushing this now to finish later

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <div class="main">
             <div class="main__container">
                 <div class="main__content">
-                    <h1>Introduction</h1>
-                    <p>I'm Adam(Enperry) and I'm an indie game developer and programmer.</p>
+                    <h1>Who I am</h1>
+                    <p>I'm an indie game developer and programmer passionate about programming and making games with emersive storylines.</p>
                     <button class="main__btn">
                         <a href="/games.html">Play My Games</a>
                     </button>
@@ -49,6 +49,7 @@
                 </div>
             </div>
         </div>
+        <div class="things"></div>
         <script src="/site.js"></script>
     </body>
 </html>
