added games tab

--- a/games.html
+++ b/games.html
@@ -1,1 +1,51 @@
 <!DOCTYPE html>
+<html lang="eng">
+    <head>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <title>Games</title>
+        <link rel="stylesheet" href="/style.css">
+        <link href="https://fonts.cdnfonts.com/css/8bit-wonder" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <nav class="navbar">
+            <div class="navbar__container">
+                <a href="/" id="navbar__logo">EnperryGames</a>
+                <div class="navbar__toggle" id="mobile-menu">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+                <ul class="navbar__menu">
+                    <li class="navbar__item">
+                        <a href="/" class="navbar__links">Home</a>
+                    </li>
+                    <li class="navbar__item">
+                        <a href="/about.html" class="navbar__links">About</a>
+                    </li>
+                    <li class="navbar__item">
+                        <a href="/games.html" class="navbar__links">Games</a>
+                    </li>
+                    <li class="navbar__btn">
+                        <a href="/" class="button">Join The Team</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="games">
+            <div class="games__container">
+                <div class="games__content">
+                    <h1>Games I've made</h1>
+                    <games>
+                        <iframe frameborder="0" src="https://itch.io/embed/1638371?bg_color=1e1e1e&amp;fg_color=ffffff&amp;link_color=6cacff&amp;border_color=333333" width="208" height="167"><a href="https://enperry248.itch.io/five-nights-at-mushys">Five Nights at Mushy's by EnperryGames</a></iframe>
+                    </games>
+                </div>
+            </div>
+        </div>
+        <div class="things"></div>
+        <script src="/site.js"></script>
+    </body>
+</html>
