--- a/games.html
+++ b/games.html
@@ -37,11 +37,9 @@
         </nav>
         <div class="games">
             <div class="games__container">
-                <div class="games__content" id="games-menu">
+                <div class="games__content">
                     <h1>Games I've made</h1>
-                    <games>
-                        <iframe frameborder="0" src="https://itch.io/embed/1638371?bg_color=1e1e1e&amp;fg_color=ffffff&amp;link_color=6cacff&amp;border_color=333333" width="208" height="167"><a href="https://enperry248.itch.io/five-nights-at-mushys">Five Nights at Mushy's by EnperryGames</a></iframe>
-                    </games>
+                    <iframe frameborder="0" src="https://itch.io/embed/1638371?bg_color=1e1e1e&amp;fg_color=ffffff&amp;link_color=6cacff&amp;border_color=333333" width="208" height="167"><a href="https://enperry248.itch.io/five-nights-at-mushys">Five Nights at Mushy's by EnperryGames</a></iframe>
                 </div>
             </div>
         </div>
