--- a/about.html
+++ b/about.html
@@ -1,1 +1,39 @@
 <!DOCTYPE html>
+<html lang="eng">
+    <head>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <title>About</title>
+        <link rel="stylesheet" href="/style.css">
+        <link href="https://fonts.cdnfonts.com/css/8bit-wonder" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <nav class="navbar">
+            <div class="navbar__container">
+                <a href="/" id="navbar__logo">EnperryGames</a>
+                <div class="navbar__toggle" id="mobile-menu">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+                <ul class="navbar__menu">
+                    <li class="navbar__item">
+                        <a href="/" class="navbar__links">Home</a>
+                    </li>
+                    <li class="navbar__item">
+                        <a href="/about.html" class="navbar__links">About</a>
+                    </li>
+                    <li class="navbar__item">
+                        <a href="/games.html" class="navbar__links">Games</a>
+                    </li>
+                    <li class="navbar__btn">
+                        <a href="/" class="button">Join The Team</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </body>
+</html>
